improvement: fixed images

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keepcalm",
-  "homepage": "https://Vlad-Remnev.github.io/fridaytemp",
+  "homepage": "https://Vlad-Remnev.github.io/keepcalm",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
